<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bibbla</string>
    <string name="hello_world">Hello world!</string>

    <!-- Text on the buttons in the main menu -->
    <string name="search">Sök</string>
    <string name="reservations">Mina</string>
    <string name="loans">Mina lån</string>
    <string name="my_pages">Mina sidor</string>
    <string name="libraries">Bib</string>
    <string name="settings">Instäl</string>
    <string name="test_jsoup">Testa jsoup</string>

    <!-- Search screen -->
    <string name="search_button">Sök</string>

    <!-- Login screen -->
    <string name="login_help">Skriv in dina inloggningsuppgifter till Göteborgs bibliotek här:</string>
    <string name="username">Efternamn</string>
    <string name="password">Bibliotekskortsnummer</string>
    <string name="pin">PIN-kod</string>
    <string name="login">Logga in</string>
    <!-- Login status -->
    <string name="not_logged_in">Inte inloggad</string>
    <string name="logged_in">Inloggad</string>

    <!-- titles -->
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reservations">Reserverade böcker</string>
    <string name="title_activity_loans">LoansActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_login">Logga in</string>
    <string name="incorrect_bibbla_credentials">Inloggningsuppgifterna stämmer inte!</string>
    <string name="gotlib_surname">Efternamn</string>
    <string name="gotlib_code">Bibliotekskortsnummer</string>
    <string name="gotlib_pin">PIN-kod</string>


</resources>
