<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow android:layout_weight="1" >
            <Button
                android:id="@+id/search_button"
                android:text="@string/search"
                style="@style/main_menu_button"/>
            <Button
                android:id="@+id/reservations_button"
                android:text="@string/reservations"
                style="@style/main_menu_button"/>
            <Button
                android:id="@+id/loans_button"
                android:text="@string/loans"
                style="@style/main_menu_button"/>
        </TableRow>
        <TableRow android:layout_weight="1" >
            <Button
                android:id="@+id/user_button"
                android:text="@string/my_pages"
                style="@style/main_menu_button"/>
            <Button
                android:id="@+id/libraries_button"
                android:text="@string/libraries"
                style="@style/main_menu_button"/>
            <Button
                android:id="@+id/settings_button"
                android:text="@string/settings"
                style="@style/main_menu_button"/>
        </TableRow>
        <TableRow android:layout_weight="1" >
            <Button
                android:id="@+id/test_jsoup_button"
                android:text="@string/test_jsoup"
                style="@style/main_menu_button"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/logged_out_button"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>