<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.gotlib.bibbla.activities.LoginActivity">

    <!-- Input fields -->

    <TextView
        android:id="@+id/login_help_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_help"/>

    <TextView
        android:id="@+id/login_error_text"
        android:layout_below="@id/login_help_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/incorrect_bibbla_credentials"
        style="@style/error_text" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_below="@id/login_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textCapWords|textPersonName" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_below="@id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- Submit -->
    <Button android:id="@+id/login_button"
        android:layout_below="@id/password_edit"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/login"/>

</RelativeLayout>
