<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.gotlib.bibbla.activities.UserActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gotlib-stuff:"
        android:id="@+id/gotlib_text"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gotlib_surname_edit"
        android:layout_below="@+id/gotlib_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/gotlib_surname" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gotlib_code_edit"
        android:layout_below="@+id/gotlib_surname_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/gotlib_code" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gotlib_pin_edit"
        android:layout_below="@+id/gotlib_code_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/gotlib_pin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spara"
        android:id="@+id/gotlib_save_button"
        android:layout_below="@+id/gotlib_pin_edit"
        android:layout_alignRight="@+id/gotlib_pin_edit"
        android:layout_alignEnd="@+id/gotlib_pin_edit" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Logga ut"
        android:id="@+id/logout_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
